@@ -603,12 +603,22 @@ XS(XS__gmsay);
 XS(XS__gmsay)
 {
 	dXSARGS;
-	if (items != 1)
-		Perl_croak(aTHX_ "Usage: gmsay(str)");
+	if (items != 1 && items != 2 && items != 3)
+		Perl_croak(aTHX_ "Usage: gmsay(str, color, send_to_world?)");
 
-	char *		str = (char *)SvPV_nolen(ST(0));
+	char * str = (char *)SvPV_nolen(ST(0));
+	int	color = 7;
+	bool send_to_world = 0;
 
-	quest_manager.gmsay(str);
+	if (items > 1) {
+		color = (int)SvIV(ST(1));
+	}
+
+	if (items > 2) {
+		send_to_world = ((int)SvIV(ST(2))) == 0?false:true;
+	}
+
+	quest_manager.gmsay(str, color, send_to_world);
 
 	XSRETURN_EMPTY;
 }
